# Hostel-Redressal-System

./: README.md  main.py  pyproject.toml
api/: api.py
api/endpoints/: grievance.py
logger/: app_logger.py
mongodb/: __init__.py  greviance.py
static/css/: static.css
templates/: aboutus.html  addissue.html  base.html  index.html  login.html  myissues.html  register.html
